Fix ticket text wrapping

--- a/resources/ticket.scss
+++ b/resources/ticket.scss
@@ -205,6 +205,11 @@ div.ticket-title {
     }
 }
 
+.ticket-body {
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
 .new-message .detail {
     padding: 8px 10px;
 }
